ECMS-3905 In ECM Admin,panel are not correcly aligned in french Fix description:  - Set width = 260px for Admin left panel  - In case text so long, set overflow=hidden for it and set title  - Remove MacStylesheet.css, MacStylesheet.css

--- a/apps/portlet-administration/src/main/webapp/skin/webui/component/admin/DefaultStylesheet.css
+++ b/apps/portlet-administration/src/main/webapp/skin/webui/component/admin/DefaultStylesheet.css
@@ -498,7 +498,7 @@
 }
 
 .UIECMAdminPortlet .ECMAdminPanel {
-  height: 100%; width: 250px;
+  height: 100%; width: 260px;
   overflow: auto; 
   float: left; /* orientation=lt */
   float: right; /* orientation=rt */
@@ -749,6 +749,8 @@ float: left;
 	color: #4f4f4f;
 	font-size: 14px;
 	padding: 0px 12px;
+  width: 195px;
+  overflow: hidden;
 }
 
 .UIECMAdminPortlet .UIECMAdminControlPanel .UIVerticalSlideTabs .VTabStyle3 .NormalTab .SwitchButton {
